--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 <body>
     <div id="c">
     </div>
-    <script src="./main/main.js" type="module"></script>
+    <script src="./main/house.js" type="module"></script>
 </body>
 
 </html>
